securebank-api/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: securebank
  labels:
    app.kubernetes.io/name: securebank
